NPC sheet started & done for now

--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -4,13 +4,60 @@
 <!--tabs-->
 <div class="grid-tabs">
     <button title="Character" name="act_tab_character" type="action">character</button>
-    <button title="Ark" name="act_tab_ark" type="action">ark</button>
-    <button title="Log" name="act_tab_log" type="action">log</button>
+    <button data-i18n="ark" name="act_tab_ark" title="Ark" type="action">ark</button>
     <img alt="Mutant Year Zero" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/logo.jpg">
+    <button data-i18n="zone-log" name="act_tab_log" title="Log" type="action">Zone Log</button>
+    <button data-i18n="npc" name="act_tab_npc" title="NPC" type="action">npc</button>
+</div>
+
+<div class="wrapper tab-content npc">
+    <div class="box npc-flex npc-info">
+        <div class="grid npc-name-grid">
+            <input name="attr_character_name" type="text" value="" />
+            <input name="attr_know_modifier" type="text" value="0" />
+            <textarea name="attr_description"></textarea>
+        </div>
+        <div class="grid npc-attr-grid">
+            <h2 data-i18n="attributes" title="npc attributes">Attributes</h2>
+            <h3 data-i18n="attr" title="npc current attribute">Attr</h3>
+            <h3 data-i18n="max" title="npc maximum attribute">Max</h3>
+            <label data-i18n="strength">strength</label>
+            <input name="attr_strength" type="text" value="" />
+            <input name="attr_strength_max" type="text" value="" />
+            <label data-i18n="agility">agility</label>
+            <input name="attr_agility" type="text" value="" />
+            <input name="attr_agility_max" type="text" value="" />
+            <label data-i18n="wits">wits</label>
+            <input name="attr_wits" type="text" value="" />
+            <input name="attr_wits_max" type="text" value="" />
+            <label data-i18n="empathy">empathy</label>
+            <input name="attr_empathy" type="text" value="" />
+            <input name="attr_empathy_max" type="text" value="" />
+        </div>
+        <div>
+            <h2 data-i18n="skills">Skills</h2>
+            <textarea name="attr_skills"></textarea>
+        </div>
+        <div>
+            <h2 data-i18n="armor">armor</h2>
+            <textarea name="attr_armor"></textarea>
+        </div>
+        <div>
+            <h2 data-i18n="weapons">weapons</h2>
+            <textarea name="attr_weapons"></textarea>
+        </div>
+        <div>
+            <h2 data-i18n="abilities">abilities</h2>
+            <fieldset class="repeating_abilities">
+                <input name="attr_name" type="text" value="" />
+                <textarea name="attr_description"></textarea>
+            </fieldset>
+        </div>
+    </div>
 </div>
 
 <div class="wrapper tab-content character">
-    <div class="box character-details">
+    <div class="box pc-only character-details">
         <div class="grid details-grid">
             <span class="label" data-i18n="name">Name</span>
             <input class="input" type="text" name="attr_character_name" value="" title="@{character_name}" />
@@ -21,10 +68,10 @@
     <div class="character-row">
         <div class="two-col-left">
             <div class="grid 2grid">
-                <div class="box character-attributes">
+                <div class="box pc-only character-attributes">
                     <div class="grid attributes-grid header">
-                        <h1 data-i18n="attribute-u">ATTRIBUTES</h1>
-                        <h2 data-i18n="max-abbr">Max</h2>
+                        <h1 data-i18n="attributes">ATTRIBUTES</h1>
+                        <h2 data-i18n="max">Max</h2>
                         <h2 data-i18n="attr">Attr</h2>
                         <h2 data-i18n="trauma">Trauma</h2>
                     </div>
@@ -95,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="box character-appearance">
+                <div class="box pc-only character-appearance">
                     <div class="grid appearance-grid appearance-header header">
                         <h1 data-i18n="appearance-u">APPEARANCE</h1>
                     </div>
@@ -118,9 +165,9 @@
                         <textarea class="input-textarea" name="attr_clothing" title="@{clothing}"></textarea>
                     </div>  
                 </div>                  
-                <div class="box character-skills">
+                <div class="box pc-only character-skills">
                     <div class="grid skills-grid header">
-                        <h1 data-i18n="skill">SKILLS</h1>
+                        <h1 data-i18n="skills">SKILLS</h1>
                         <h2 data-i18n="lvl">Lvl</h2>
                         <h2 data-i18n="attr">Attr</h2>
                         <h2 data-i18n="total">Total</h2>
@@ -304,9 +351,9 @@
                         </div>
                     </div>
                 </div> 
-                <div class="box character-weapons">
+                <div class="box pc-only character-weapons">
                     <div class="grid weapons-grid header">
-                        <h1 data-i18n="weapon-u">WEAPONS</h1>
+                        <h1 data-i18n="weapons">WEAPONS</h1>
                         <h2 data-i18n="name">Name</h2>      
                         <h2 data-i18n="skill">Skill</h2>
                         <h2 data-i18n="bonus">Bonus</h2>
@@ -351,7 +398,7 @@
                         </fieldset>
                     </div>
                 </div>
-                <div class="box character-armor">
+                <div class="box pc-only character-armor">
                     <div class="armor-container">
                         <div class="armor-grid">
                             <div class="armor-box header"><h1 data-i18n="armor">ARMOR</h1></div>
@@ -386,7 +433,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="box rot-level">
+                <div class="box pc-only rot-level">
                     <div class="rot-grid">
                         <input name="attr_rot_roll" type="hidden" value="" />
                         <div class="rot-box header"><h1 data-i18n="rot-p">ROT POINTS</h1></div>
@@ -411,14 +458,14 @@
                         <button class="dicefontd6" name="rot" type="roll" value=" &{template:rolls} {{character_name=@{character_name}}} {{character_id=@{character_id}}} {{name=^{rot}}} @{rot_roll}">L</button>
                     </div>
                 </div>
-                <div class="box character-experience">
+                <div class="box pc-only character-experience">
                     <div class="experience-grid">
                         <div class="experience-box header">
                             <h1 data-i18n="experience-u">EXPERIENCE</h1>
                         </div>
                     </div>
                 </div>
-                <div class="experience-dots dots">
+                <div class="experience-dots pc-only  dots">
                     <input name="attr_experience" type="radio" value="0" checked /><span>0</span>
                     <input name="attr_experience" type="radio" value="1"/><span>1</span>
                     <input name="attr_experience" type="radio" value="2"/><span>2</span>
@@ -431,7 +478,7 @@
                     <input name="attr_experience" type="radio" value="9"/><span>9</span>
                     <input name="attr_experience" type="radio" value="10"/><span>10</span>
                 </div>
-                <div class="box character-relationships">
+                <div class="box pc-only character-relationships">
                     <div class="relationships-grid">                
                         <div class="grid relationships-grid relationships-header header">
                             <h1 data-i18n="relationships">RELATIONSHIPS</h1>
@@ -458,7 +505,7 @@
                         <label data-i18n="i-dream">my big dream:</label><input name="attr_dream" title="@{dream}" type="text" value="" />
                     </div>
                 </div>
-                <div class="box character-notes">
+                <div class="box pc-only character-notes">
                     <div class="notes-grid">                
                         <div class="notes-box-header header">
                             <h1 data-i18n="notes">NOTES</h1>
@@ -482,7 +529,7 @@
                 </div>
             </div>
         </div>
-         <div class="one-col-right">
+         <div class="one-col-right pc-only ">
             <div class="grid">
                 <div class="box character-injuries">
                     <div class="grid injuries-grid injuries-header header">
@@ -1185,7 +1232,7 @@ on("change:armor1_equiped change:armor1_damage change:armor1_bonus change:armor2
     });
 
     //Switch between sheet types.
-    [`character`, `ark`, `log`].forEach(attr => {
+    [`character`, `ark`, `log`, 'npc'].forEach(attr => {
         on(`clicked:tab_${attr}`, () => {
             setAttrs({tab: attr});
         });
