--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -438,7 +438,7 @@
                         <input name="attr_rot_roll" type="hidden" value="" />
                         <div class="rot-box header"><h1 data-i18n="rot-p">ROT POINTS</h1></div>
                         <div class="dots">
-                            <input type="hidden" name="attr_rot_permenant"/>
+                            <input type="hidden" name="attr_rot_permenant" value="" />
                             <input name="attr_rot" type="radio" value="0" checked /><span>0</span>
                             <input name="attr_rot" type="radio" value="1"/><span>1</span>
                             <input name="attr_rot" type="radio" value="2"/><span>2</span>
