small input tweaks

--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -22,17 +22,17 @@
             <h3 data-i18n="attr" title="npc current attribute">Attr</h3>
             <h3 data-i18n="max" title="npc maximum attribute">Max</h3>
             <label data-i18n="strength">strength</label>
-            <input name="attr_strength" type="text" value="" />
-            <input name="attr_strength_max" type="text" value="" />
+            <input name="attr_strength" min="0" type="number" value="" />
+            <input name="attr_strength_max" min="0"  type="number" value="" />
             <label data-i18n="agility">agility</label>
-            <input name="attr_agility" type="text" value="" />
-            <input name="attr_agility_max" type="text" value="" />
+            <input name="attr_agility" min="0"  type="number" value="" />
+            <input name="attr_agility_max" min="0"  type="number" value="" />
             <label data-i18n="wits">wits</label>
-            <input name="attr_wits" type="text" value="" />
-            <input name="attr_wits_max" type="text" value="" />
+            <input name="attr_wits" min="0"  type="number" value="" />
+            <input name="attr_wits_max" min="0"  type="number" value="" />
             <label data-i18n="empathy">empathy</label>
-            <input name="attr_empathy" type="text" value="" />
-            <input name="attr_empathy_max" type="text" value="" />
+            <input name="attr_empathy" min="0" type="number" value="" />
+            <input name="attr_empathy_max" min="0" type="number" value="" />
         </div>
         <div>
             <h2 data-i18n="skills">Skills</h2>
