Starfinder (simple) bug fix 071219 (#5301)
* Starfinder (simple) Update 021619

Sheet cosmetic changes
•Added Faction Block for Organized Play use
•Swapped Other Statistics and Currency and Experience blocks to make signifcant attributes (initiative and movement speeds) encountered sooner when opening character sheet.
•Added Fame and Reputation to Currency and Experience block for Organized Play use.
•Added Skill Notes block in preparation for including skill notes in Skill Check rolls.

* Starfinder (simple) update 021719

Added functionality for selecting which skills will display a skill note when the check is rolled.

* Starfinder (simple) update 030219

• Replaced Nonlethal damage (useless attribute) with temp-HP|max (useful for tracking shields) and some minor style changes to health and resolve block.
• Fixed bug where Level 1 spells would not collapse when checkbox was cleared.

* Starfinder (simple) Major Update! 030819

•Significant layout changes on 'Character Tab' no changes to attr_names.

•Overhaul of 'Starship Tab'
     - No attr_names were changed, but several changed type (text to number)
     - Many new attr_names added to facilitate new roller buttons and macro calculations
     - Sheet now calculates several variables that previously required manual entry.
     - Added roll buttons for starship combat actions (PC and NPC).
     - Starship systems section updated to provide essential attributes for calculating above mentioned variables.
     - Starship Critical Damage tracker updated with attr_names and values that are used by the crew actions to account for damage to the starship.

***Please contact if you have any questions, this is a very large update!***

* Starfinder (simple) update 030819a

added 'Item' to the ability repeating section 'Type' selector

* Starfinder (simple) Update 030919

Added text to starship critical damage section to identify the new abilities of this section.

* Starfinder (simple)

--- a/Starfinder (simple)/Starfinder (simple).html
+++ b/Starfinder (simple)/Starfinder (simple).html
@@ -2641,8 +2641,8 @@
 					    		    <select title="@{repeating_pc-weapon_$X_drone-attack-type}" name="attr_drone-attack-type">
 						    	    	<option value="0" selected >None</option>
 							    	    <option value="@{drone-attk-melee}" >Melee</option>
-								        <option value="@{drone-attk-ranged}" >Operative</option>
-								        <option value="@{drone-attk-ranged}" >Ranged</option>
+								        <option value="@{drone-attk-range}" >Operative</option>
+								        <option value="@{drone-attk-range}" >Ranged</option>
     								    <option value="@{drone-attk-thrown}" >Thrown</option>
 	    						    </select>
 		    					    <br>Attack Type
@@ -4081,7 +4081,7 @@ to foil enemy targeting arrays and incoming projectiles forcing gunners onboard 
 				</div>
 				<b>Macro Text&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
 				<input type="checkbox" class="sheet-macro-show" title="@{repeating_npc_weapon_$X_macro-text-show}" name="attr_macro-text-show" value="1"  />
-				<textarea class="sheet-macro" title="@{repeating_npc-weapon_$X_macro-text-npc}" name="attr_macro-text-npc">?{Hide this roll?|No, |Yes,/w GM} &{template:pf_attack} {{name=@{character_name}'s @{npc-weapon-name}}} {{subtags=@{npc-weapon-type}}} {{attack=[[1d20cs>20 + [[@{npc-weapon-total-attack}]] ]]}} {{damage=[[@{npc-damage-dice-num}d@{npc-damage-die}+@{npc-weapon-total-damage}]]}} {{dmgcrit=[[@{npc-damage-dice-num}d@{npc-damage-die}+@{npc-weapon-total-damage}]] and @{npc-weapon-critical}}} {{notes=@{npc-weapon-notes}}}</textarea>
+				<textarea class="sheet-macro" title="@{repeating_npc-weapon_$X_macro-text-npc}" name="attr_macro-text-npc">?{Hide this roll?|No, |Yes,/w GM} &{template:pf_attack} {{name=@{character_name}'s @{npc-weapon-name}}} {{subtags=@{npc-weapon-type}}} {{attack=[[1d20cs>20 + [[@{npc-weapon-total-attack}]] + ?{Any other modifiers?|0} ]]}} {{damage=[[@{npc-damage-dice-num}d@{npc-damage-die}+@{npc-weapon-total-damage}]]}} {{dmgcrit=[[@{npc-damage-dice-num}d@{npc-damage-die}+@{npc-weapon-total-damage}]] and @{npc-weapon-critical}}} {{notes=@{npc-weapon-notes}}}</textarea>
 				<br>
 				<span>&nbsp;</span>
 			</fieldset>
@@ -4268,7 +4268,7 @@ to foil enemy targeting arrays and incoming projectiles forcing gunners onboard 
 			<div class="sheet-table-row">
 				<span class="sheet-table-data-center"><button style="font-size:100%;" title="NPC-Perception-Check" type="roll" value="?{Hide this roll?|No, |Yes,/w GM} &{template:pf_check} {{name=@{character_name}'s}} {{check=Perception check}} {{skill_chk=[[1d20 + [[@{Perception-npc}]] ]]}}" name="roll_NPC-Perception-Check"></button></span>
 				<span class="sheet-table-data-left">Perception</span>
-				<span class="sheet-table-data-center"><input title="Perception-npc" type="number" value="(@{WIS-bonus} + @{Perception-npc-misc})" disabled></span>
+				<span class="sheet-table-data-center"><input title="Perception-npc" type="number" name="attr_Perception-npc" value="(@{WIS-bonus} + @{Perception-npc-misc})" disabled></span>
 				<span class="sheet-table-data-center"><input title="Perception-npc-misc" type="number" name="attr_Perception-npc-misc" value="0"></span>
 
 				<span class="sheet-table-data-center"><button style="font-size:100%;" title="NPC-Physical-Science-Check" type="roll" value="?{Hide this roll?|No, |Yes,/w GM} &{template:pf_check} {{name=@{character_name}'s}} {{check=Physical Science check}} {{skill_chk=[[1d20 + [[@{Physical-Science-npc}]] ]]}}" name="roll_NPC-Physical-Science-Check"></button></span>
