--- a/A Song of Ice and Fire/SIFRPNew.html
+++ b/A Song of Ice and Fire/SIFRPNew.html
@@ -836,7 +836,7 @@
                                 <div class="sheet-row">
                                     <div class="sheet-item" style="width: 15%;"></div>
                                     <div class="sheet-item" style="width: 85%;"> <button type='roll' class='sheet-specialtyRoll' name='attr_languageRe-roll'
-                                        value='&{template:sofai} {{input=**@{character_name} tests Language (@{languageKnown})!** \n\n [[ ( [[ @{language} + @{knownLanguageRank} + ?{Bonus Dice|0} ]] )d6dl[[ @{language} + @{knownLanguageRank} + ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}'><label
+                                        value='&{template:sofai} {{input=**@{character_name} tests Language (@{languageKnown})!** \n\n [[ ( [[ @{language} + @{knownLanguageRank} + ?{Bonus Dice|0} ]] )d6dl[[ @{knownLanguageRank} + ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}'><label
                                             style="vertical-align: middle;">Roll</label></button></div>
                                 </div>
                                 <br/>
@@ -861,7 +861,7 @@
                             </div>
                             <div class="sheet-col">
                                 <button type='roll' class='sheet-characteristics' name='attr_knowledge-roll'
-                                    value='&{template:sofai} {{input=**@{character_name} tests Knowledge!** \n\n [[ ( [[ @{language} + @{languageX} + ?{Bonus Dice|0} ]] )d6dl[[ @{languageX} + ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}'><label
+                                    value='&{template:sofai} {{input=**@{character_name} tests Knowledge!** \n\n [[ ( [[ @{knowledge} + ?{Bonus Dice|0} ]] )d6dl[[ ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}'><label
                                         style="vertical-align: middle;">Knowledge</label></button>
                             </div>
                         </div>
@@ -880,7 +880,7 @@
                                         value='0' /></div>
                                 <div class="sheet-item" style="width: 85%;"><button type='roll'
                                         class="sheet-specialtyRoll" name="roll_knowledgeEducation"
-                                        value="&{template:sofai} {{input=**@{character_name} tests Knowledge (Education)!** \n\n [[ ( [[ @{language} + @{languageEducation} + ?{Bonus Dice|0} ]] )d6dl[[ @{languageEducation} + ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}">Education</button>
+                                        value="&{template:sofai} {{input=**@{character_name} tests Knowledge (Education)!** \n\n [[ ( [[ @{knowledge} + @{knowledgeEducation} + ?{Bonus Dice|0} ]] )d6dl[[ @{knowledgeEducation} + ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}">Education</button>
                                 </div>
                             </div>
                             <div class="sheet-row">
@@ -889,7 +889,7 @@
                                         value='0' /></div>
                                 <div class="sheet-item" style="width: 85%;"><button type='roll'
                                         class="sheet-specialtyRoll" name="roll_knowledgeResearch"
-                                        value="&{template:sofai} {{input=**@{character_name} tests Knowledge (Research)!** \n\n [[ ( [[ @{language} + @{languageResearch} + ?{Bonus Dice|0} ]] )d6dl[[ @{languageResearch} + ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}">Research</button>
+                                        value="&{template:sofai} {{input=**@{character_name} tests Knowledge (Research)!** \n\n [[ ( [[ @{knowledge} + @{knowledgeResearch} + ?{Bonus Dice|0} ]] )d6dl[[ @{knowledgeResearch} + ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}">Research</button>
                                 </div>
                             </div>
                             <div class="sheet-row">
@@ -898,7 +898,7 @@
                                         value='0' /></div>
                                 <div class="sheet-item" style="width: 85%;"><button type='roll'
                                         class="sheet-specialtyRoll" name="roll_knowledgeStreetwise"
-                                        value="&{template:sofai} {{input=**@{character_name} tests Knowledge (Streetwise)!** \n\n [[ ( [[ @{language} + @{languageStreetwise} + ?{Bonus Dice|0} ]] )d6dl[[ @{languageStreetwise} + ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}">Streetwise</button>
+                                        value="&{template:sofai} {{input=**@{character_name} tests Knowledge (Streetwise)!** \n\n [[ ( [[ @{knowledge} + @{knowledgeStreetwise} + ?{Bonus Dice|0} ]] )d6dl[[ @{knowledgeStreetwise} + ?{Bonus Dice|0} + @{wounds} + ?{Penalty Dice|0} ]] - @{injuries} - @{fatigue} ]] }}">Streetwise</button>
                                 </div>
                             </div>
                         </div>
@@ -1471,7 +1471,7 @@
                         </div>
                         <div class="sheet-row">
                             <div class="sheet-item" style="width: 50%; margin-left: 25%;"><button name="roll_intrigueInit" type="roll"
-                                value="&{template:sofai} {{input=**@{character_name} tests a [[ ( [[ @{selected|status} - @{selected|wounds} + @{selected|statusReputation}]] )d6kh@{selected|status}sd - @{selected|injuries} &{tracker}]] for Initiative (Intrigue)!">
+                                value="&{template:sofai} {{input=**@{character_name} tests Initiative (Intrigue)!** \n\n [[ ( [[ @{status} + @{statusReputation} ]] )d6dl[[ @{wounds} + @{statusReputation} ]] - @{injuries} &{tracker} ]] }}">
                                 <label style="font-size: 1em;">Initiative</label> </button></div>
                         </div>
                         <br/>
@@ -1544,7 +1544,7 @@
                         </div>
                         <div class="sheet-row">
                             <div class="sheet-item" style="width: 50%; margin-left: 25%"><button name="roll_combatInit" type="roll" class="initRoll"
-                                value="&{template:sofai} {{input=**@{character_name} tests a [[ ( [[ @{selected|agility} - @{selected|wounds} + @{selected|agilityQuickness}]] )d6kh@{selected|agility}sd - @{selected|injuries} &{tracker}]] for Initiative (Combat)!">
+                                value="&{template:sofai} {{input=**@{character_name} tests Initiative (Combat)!** \n\n [[ ( [[ @{agility} + @{agilityQuickness}]] )d6dl[[ @{wounds} + @{agilityQuickness} ]] - @{injuries} &{tracker} ]] }}">
                                 <label style="font-size: 1em;">Initiative</label></button></div>
                         </div>
                         <br/>
@@ -1881,7 +1881,7 @@
                         </div>
                         <div class="sheet-row">
                             <div class="sheet-item" style="width: 15%;"><button name="roll_hit" type="roll"
-                                    value="&{template:sofai} {{input=** @{character_name} attacks @{target|token_name} with @{weapon}!** \n\n Attack: ( [[ @{weaponType} - @{wounds} + @{weaponSpecialty} - @{weaponTraining}]] )d6kh@{weaponType}sd - @{injuries} - @{fatigue} + ?{Modifier|0} ]] \n Target:  [[@{target|combatDefense}]]}}">
+                                    value="&{template:sofai} {{input=**@{character_name} attacks with @{weapon}!** \n\n Attack: [[ ( [[ @{weaponType} + @{weaponSpecialty} + @{weaponTraining} ]] )d6dl[[ @{wounds} + @{weaponSpecialty} + @{weaponTraining} ]] - @{injuries} - @{fatigue} + ?{Modifier|0} ]] }}">
                                     <span>Hit</span> </button></div>
                             <div class="sheet-item" style="width: 20%;"><button name="roll_Rangeddamage" type="roll"
                                     value="&{template:sofai} {{input=**@{character_name} does [[@{weaponDamageTest} + @{weaponDamageMod} + ?{Modifier|0}]] damage!**}}">
