--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -22,12 +22,13 @@
 	            <h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 	            <ul>
 					<li>Rolltemplate text. On critical failure for dodge, added additional notes. Suggested by Mike W.</li>
-                    <li>Rolltemplate text. On critical failure for parry, added additional notes. Suggested by Mike W.</li>
-                    <li>Rolltemplate text. On critical failure for block, added additional notes. Suggested by Mike W.</li>
-                    <li>Rolltemplate text. On critical success for any active defense, added additional notes. Suggested by Mike W.</li>
-                    <li>Bio\Misc. Tab. Added Training textarea below Background history & notes. Suggested by Mike W.</li>
-                    <li>General Tab. Added toggle to show/hide encumbrance table. Suggested by Mike W.</li>
-				</ul>
+            		<li>Rolltemplate text. On critical failure for parry, added additional notes. Suggested by Mike W.</li>
+            		<li>Rolltemplate text. On critical failure for block, added additional notes. Suggested by Mike W.</li>
+            		<li>Rolltemplate text. On critical success for any active defense, added additional notes. Suggested by Mike W.</li>
+            		<li>Bio\Misc. Tab. Added Training textarea below Background history & notes. Suggested by Mike W.</li>
+            		<li>General Tab. Added toggle to show/hide encumbrance table. Suggested by Mike W.</li>
+            		<li>General Tab: Revamped Point summary to show more details. Added more space for notes.</li>
+            	</ul>
 	            <label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 	            <button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
 	        </div>
@@ -1254,8 +1255,8 @@
 				</div> <!-- .sheet-row -->
 			</div>
 		</div>
-		
-		<!-- _____ _____ MISCELLANEOUS BOX _____ _____ -->
+	
+	    <!-- _____ _____ MISCELLANEOUS BOX _____ _____ -->
 		<div class="sheet-box sheet-general-notes-box">
 		    
 		    <div class="sheet-table">
@@ -1280,11 +1281,11 @@
 				<div class="sheet-header">
 					<div class="sheet-popup">Point Sum</div>
 					<span class="sheet-tooltip">
-						<strong>Total</strong>: Manual input: Represents to total value of the<br/>
-						PC in Character Points (spent and unspent combined).
+						<strong>Total</strong>: Manual input: Represents total value of the<br />
+						PC in Character Points (spent & unspent combined).
 						<br />
-						<strong>Spent</strong>: Automatic total of Spent points: Attributes +<br/>
-						Traits + Skills + Other.
+						<strong>Spent</strong>: Automatic total of Spent points: <br />
+						Attributes + Traits + Skills + Other.
 						<br/>
 						<strong>Unspent</strong>: Has the option of being Manual or<br/>
 						Automatic, depending on an option selected on the
@@ -1303,7 +1304,11 @@
 
 				<div class="sheet-row margin-bottom sheet-row-other">
 					<div class="sheet-cell sheet-col0 sheet-label">
-						Total
+						<div class="sheet-popup">Total</div>
+    					<span class="sheet-tooltip">
+    					    <strong>Total</strong>: Manual input: Represents total value of the<br/>
+						    PC in Character Points (spent and unspent combined).
+    					</span>	
 					</div>
 					<div class="sheet-cell sheet-col1">
 						<input type="text" name="attr_total_points" value="150" />
@@ -1311,13 +1316,92 @@
 				</div> <!-- .sheet-row -->
 				<div class="sheet-row sheet-row-attributes sheet-hr">
 					<div class="sheet-cell sheet-col0 sheet-label">
-						Attributes
+						<div class="sheet-popup">Attributes</div>
+    					<span class="sheet-tooltip">
+    						Point Summary for: <br />
+    						ST, DX, IQ, HT,<br />
+    						HP, FP, Energery Reserve One, Two, and Three,<br />
+    						Per, Vision, Hearing, Smell, Touch,<br />
+    						Will, Fright, Hard to Subdue, Hard to Kill,<br />
+    						Speed, Move, Enhanced Move, Enhanced Dodge,<br />
+    						Lift ST, Striking ST,<br />
+    						Flying, Air Move, Enhanced Air Move, Super Jump
+    					</span>
 					</div>
 					<div class="sheet-cell sheet-col1">
-						<input type="text" name="attr_att_points" value="@{strength_points} + @{dexterity_points} + @{intelligence_points} + @{health_points} + @{perception_points} + @{vision_points} + @{hearing_points} + @{taste_smell_points} + @{touch_points} + @{willpower_points} + @{fear_check_points} + @{hit_points_points} + @{fatigue_points_points} + @{energy_points_points} + @{user_pool1_points} + @{user_pool2_points} + @{basic_speed_points} + @{basic_move_points} + @{striking_st_points} + @{lift_st_points} + @{enhanced_ground_move_points} + @{flight_points} + @{basic_air_move_points} + @{enhanced_air_move_points} + @{amphibious_points} + @{basic_water_move_points} + @{enhanced_water_move_points} + @{super_jump_points} + @{unconscious_check_points} + @{death_check_points}" disabled="disabled" />
+						<input type="text" name="attr_att_points" value="@{strength_points} + 
+						                                                 @{dexterity_points} + 
+						                                                 @{intelligence_points} + 
+						                                                 @{health_points} + 
+						                                                 @{perception_points} + 
+						                                                 @{vision_points} + 
+						                                                 @{hearing_points} + 
+						                                                 @{taste_smell_points} + 
+						                                                 @{touch_points} + 
+						                                                 @{willpower_points} + 
+						                                                 @{fear_check_points} + 
+						                                                 @{hit_points_points} + 
+						                                                 @{fatigue_points_points} + 
+						                                                 @{energy_points_points} + 
+						                                                 @{user_pool1_points} + 
+						                                                 @{user_pool2_points} + 
+						                                                 @{basic_speed_points} + 
+						                                                 @{basic_move_points} + 
+						                                                 @{striking_st_points} + 
+						                                                 @{lift_st_points} + 
+						                                                 @{enhanced_ground_move_points} + 
+						                                                 @{flight_points} + 
+						                                                 @{basic_air_move_points} + 
+						                                                 @{enhanced_air_move_points} + 
+						                                                 @{amphibious_points} + 
+						                                                 @{basic_water_move_points} + 
+						                                                 @{enhanced_water_move_points} + 
+						                                                 @{super_jump_points} + 
+						                                                 @{unconscious_check_points} + 
+						                                                 @{death_check_points}" disabled="disabled" />
 					</div>
 				</div> <!-- .sheet-row -->
 				<div class="sheet-row sheet-row-traits">
+					<div class="sheet-cell sheet-col0 sheet-label">
+						<div class="sheet-popup">Adv.</div>
+    					<span class="sheet-tooltip">
+    						Point Summary for: <br />
+    						Languages, Tech Level, Appearance, Cultural Familiarities,<br />
+    						Advantages & Perks
+    					</span>
+					</div>
+					<div class="sheet-cell sheet-col1">
+						<input type="number" name="attr_trait_advantages_points" disabled="disabled" value="@{languages_points} + 
+						                                                                                    @{tl_pts} + 
+						                                                                                    @{appearance_pts} + 
+						                                                                                    @{cf_points} + 
+						                                                                                    @{advantages_points}" />
+					</div>
+				</div> <!-- .sheet-row -->
+				<div class="sheet-row sheet-row-traits">
+					<div class="sheet-cell sheet-col0 sheet-label">
+						<div class="sheet-popup">Disadv.</div>
+    					<span class="sheet-tooltip">
+    						Point Summary for: <br />
+    						Disadvantages & Quirks
+    					</span>
+					</div>
+					<div class="sheet-cell sheet-col1">
+						<input type="number" name="attr_trait_disadvantages_points" disabled="disabled" value="@{disadvantages_points}" />
+					</div>
+				</div> <!-- .sheet-row -->
+				<div class="sheet-row sheet-row-traits">
+					<div class="sheet-cell sheet-col0 sheet-label">
+					    <div class="sheet-popup">Racial</div>
+    					<span class="sheet-tooltip">
+    						Point Summary for Racial Traits
+    					</span>
+					</div>
+					<div class="sheet-cell sheet-col1">
+						<input type="number" name="attr_trait_racial_points" disabled="disabled" value="@{racial_points}" />
+					</div>
+				</div> <!-- .sheet-row -->
+				<div class="sheet-row sheet-row-traits" style="display: none;">
 					<div class="sheet-cell sheet-col0 sheet-label">
 						Traits
 					</div>
@@ -1330,7 +1414,26 @@
 						Skills
 					</div>
 					<div class="sheet-cell sheet-col1">
-						<input type="text" name="attr_skill_points" disabled="disabled" value="@{skills_points} + @{techniques_points} + @{spells_points}" />
+						<input type="text" name="attr_skill_points" disabled="disabled" value="@{skills_points}" />
+					</div>
+				</div> <!-- .sheet-row -->
+				<div class="sheet-row sheet-row-skills">
+					<div class="sheet-cell sheet-col0 sheet-label">
+						<div class="sheet-popup">Tech.</div>
+    					<span class="sheet-tooltip">
+    						Techniques
+    					</span>
+					</div>
+					<div class="sheet-cell sheet-col1">
+						<input type="text" name="attr_techniques_total_points" disabled="disabled" value="@{techniques_points}" />
+					</div>
+				</div> <!-- .sheet-row -->
+				<div class="sheet-row sheet-row-skills">
+					<div class="sheet-cell sheet-col0 sheet-label">
+						Spells
+					</div>
+					<div class="sheet-cell sheet-col1">
+						<input type="text" name="attr_spells_total_points" disabled="disabled" value="@{spells_points}" />
 					</div>
 				</div> <!-- .sheet-row -->
 				<div class="sheet-row sheet-row-other">
@@ -3694,10 +3797,10 @@
 
 		<p>If there are others that are working on or wish to work on this sheet, lets coordinate using the Roll20 forum for now - perhaps later we can use GitHub.</p>
 	</ul>
-
+	
 	<h4>Version: 1.6.2</h4>
 	
-	<p>Pull Request: 07/23/2019</p>
+	<p>Pull Request: 07/30/2019</p>
 
 	<ul>
 		<li>Rolltemplate text. On critical failure for dodge, added additional notes. Suggested by Mike W.</li>
@@ -3706,6 +3809,7 @@
 		<li>Rolltemplate text. On critical success for any active defense, added additional notes. Suggested by Mike W.</li>
 		<li>Bio\Misc. Tab. Added Training textarea below Background history & notes. Suggested by Mike W.</li>
 		<li>General Tab. Added toggle to show/hide encumbrance table. Suggested by Mike W.</li>
+		<li>General Tab: Revamped Point summary to show more details.</li>
 	</ul>
 
 	<h4>Version: 1.6.1</h4>
