[WOIN] Update onditions Track for NEW
WOIN-NEW uses a different Status/Condition system compared to WOIN-OLD. Added Condition Tracking, Linked Condition/Status display to appropriate sheet toggle.

Updated CSS for Condition display pull down field.

--- a/WOIN/WOIN.html
+++ b/WOIN/WOIN.html
@@ -755,11 +755,325 @@
             </div>
         </div>
         <br>
-    <!-- Status -->
-    
-        <input type="radio" class="sheet-new sheet-hidden" name="attr_sheet_type11" value="0" checked/>
-        <input type="radio" class="sheet-old sheet-hidden" name="attr_sheet_type11"  value="1" />
-        <div class="sheet-header">Status Track</div>
+    <!-- Conditions & Status Track -->
+    	<input type="radio" class="sheet-block1 sheet-hidden" name="attr_sheet_type11" value="0" checked/><span></span>
+        <input type="radio" class="sheet-block2 sheet-hidden" name="attr_sheet_type11" value="1"/><span></span>
+        <div class="sheet-block1">
+			<div class="sheet-header">Condition Track</div>
+				<table style="width:800px;">
+					<tr>
+						<td>Damage Type</td>
+						<td>Condition Track</td>
+						<td><div style="width:5px;"></div></td>
+						<td>None</td>
+						<td>Temp</td>
+						<td>Severe</td>
+						<td>Persist</td>
+					</tr>
+					<tr>
+						<td>Bleeding</td>
+						<td>
+							<select class="sheet-select2" name="attr_Bleeding_level">
+								<option value="0">None</option>
+								<option value="1">1d6 dmg start of your turn</option>
+								<option value="2">2d6 dmg start of your turn</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Bleeding" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Bleeding" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Bleeding" value="2" /><span></span></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Blind</td>
+						<td>
+							<select class="sheet-select2" name="attr_Blind_level">
+								<option value="0">None</option>
+								<option value="1">30' vision, SPEED/2</option>
+								<option value="2">Blind, SPEED/2, -2d6 sight Actions</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Blind" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Blind" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Blind" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Blind" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Burning</td>
+						<td>
+							<select class="sheet-select2" name="attr_Burning_level">
+								<option value="0">None</option>
+								<option value="1">1d6 dmg/round</option>
+								<option value="2">2d6 dmg/round</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Burning" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Burning" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Burning" value="2" /><span></span></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>Charmed</td>
+						<td>
+							<select class="sheet-select2" name="attr_Charmed_level">
+								<option value="0">None</option>
+								<option value="1">Protect Charmer</option>
+								<option value="2">Obey Charmer</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Charmed" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Charmed" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Charmed" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Charmed" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Confused</td>
+						<td>
+							<select class="sheet-select2" name="attr_Confused_level">
+								<option value="0">None</option>
+								<option value="1">Drop carried, cannot tell friend from foe</option>
+								<option value="2">1d6 to determine Condition each turn</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Confused" checked value="0" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Confused" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Confused" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Confused" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Dazed</td>
+						<td>
+							<select class="sheet-select2" name="attr_Dazed_level">
+								<option value="0">None</option>
+								<option value="1">You can take 1 Action/round</option>
+								<option value="2">You cannot take Actions</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Dazed" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Dazed" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Dazed" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Dazed" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Deaf</td>
+						<td>
+							<select class="sheet-select2" name="attr_Deaf_level">
+								<option value="0">None</option>
+								<option value="1">30' hearing, -1d6 PER/INIT, SOAK 5 sonic</option>
+								<option value="2">Deaf, -2d6 PER/INIT, SOAK 10 sonic</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Deaf" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Deaf" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Deaf" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Deaf" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Disarmed</td>
+						<td>
+							<select class="sheet-select2" name="attr_Disarmed_level">
+								<option value="0">None</option>
+								<option value="1">Current weapon cannot be used</option>
+								<option value="2">Severe, current weapon cannot be used</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Disarmed" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Disarmed" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Disarmed" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Disarmed" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Disarmored</td>
+						<td>
+							<select class="sheet-select2" name="attr_Disarmored_level">
+								<option value="0">None</option>
+								<option value="1">SOAK/2 round up</option>
+								<option value="2">SOAK=0</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Disarmored" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Disarmored" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Disarmored" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Disarmored" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Downed</td>
+						<td>
+							<select class="sheet-select2" name="attr_Downed_level">
+								<option value="0">None</option>
+								<option value="1">Prone, cannot stand</option>
+								<option value="2">Prone & helpless, DEF=10</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Downed" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Downed" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Downed" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Downed" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Drunk</td>
+						<td>
+							<select class="sheet-select2" name="attr_Drunk_level">
+								<option value="0">None</option>
+								<option value="1">Cannot move more than once/round</option>
+								<option value="2">Cannot move, wander 1d6 squares in random direction</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Drunk" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Drunk" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Drunk" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Drunk" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Fatigued</td>
+						<td>
+							<select class="sheet-select2" name="attr_Fatigued_level">
+								<option value="0">None</option>
+								<option value="1">Can take 1 Action/rnd, CARRY Increment/2</option>
+								<option value="2">As above & HEALTH/2</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Fatigued" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Fatigued" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Fatigued" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Fatigued" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Forgetful</td>
+						<td>
+							<select class="sheet-select2" name="attr_Forgetful_level">
+								<option value="0">None</option>
+								<option value="1">Cannot use Skills</option>
+								<option value="2">Complete loss of memory</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Forgetful" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Forgetful" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Forgetful" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Forgetful" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Manic</td>
+						<td>
+							<select class="sheet-select2" name="attr_Manic_level">
+								<option value="0">None</option>
+								<option value="1">Cannot take hostile/aggressive action</option>
+								<option value="2">Convulsed with laughter, no actions</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Manic" value="0" checked /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Manic" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Manic" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Manic" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Pain</td>
+						<td>
+							<select class="sheet-select2" name="attr_Pain_level">
+								<option value="0">None</option>
+								<option value="1">1d6 dmg if you take 2nd Action in turn</option>
+								<option value="2">1d6 dmg if take any Action</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Pain" value="0" checked/><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Pain" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Pain" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Pain" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Poisoned</td>
+						<td>
+							<select class="sheet-select2" name="attr_Poisoned_level">
+								<option value="0">None</option>
+								<option value="1">You cannot be healed</option>
+								<option value="2">You cannot be healed, 1d6 dmg/turn</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Poisoned" value="0" checked/><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Poisoned" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Poisoned" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Poisoned" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Restrained</td>
+						<td>
+							<select class="sheet-select2" name="attr_Restrained_level">
+								<option value="0">None</option>
+								<option value="1">Cannot move from current square</option>
+								<option value="2">0 Actions, DEFENSE=10</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Restrained" value="0" checked/><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Restrained" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Restrained" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Restrained" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Sick</td>
+						<td>
+							<select class="sheet-select2" name="attr_Sick_level">
+								<option value="0">None</option>
+								<option value="1">Cannot Jump, 1 Action/round</option>
+								<option value="2">as above, -2d6 Attribute checks</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Sick" value="0" checked/><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Sick" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Sick" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Sick" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Sleeping</td>
+						<td>
+							<select class="sheet-select2" name="attr_Sleeping_level">
+								<option value="0">None</option>
+								<option value="1">Only 1 Action/turn</option>
+								<option value="2">Asleep, cannot be woken</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Sleeping" value="0" checked/><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Sleeping" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Sleeping" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Sleeping" value="3" /><span></span></td>
+					</tr>
+					<tr>
+						<td>Slowed</td>
+						<td>
+							<select class="sheet-select2" name="attr_Slowed_level">
+								<option value="0">None</option>
+								<option value="1">SPEED/2, -4 DEFENSEs</option>
+								<option value="2">SPEED/2, DEFENSEs=10, only 1 Action/turn</option>
+							</select>
+						</td>
+						<td></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Slowed" value="0" checked/><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Slowed" value="1" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Slowed" value="2" /><span></span></td>
+						<td><input type="radio" class="sheet-radio1" name="attr_Slowed" value="3" /><span></span></td>
+					</tr>
+				</table>
+		</div>
+		<div class="sheet-block2">
+			<div class="sheet-header">Status Track</div>
             <table style="width:800px;">
                 <tr>
                     <td>Damage Type</td>
@@ -1053,6 +1367,7 @@
                 </tr>
             </table>
     </div>
+	</div>
     <!-- Exploits -->
     <div class="sheet-tab-content sheet-tab4">
             <input type="radio" class="sheet-block1 sheet-hidden" name="attr_sheet_switch9" value="0" checked/><span></span>
